# find-substr-simd

./: CMakeLists.txt  readme.md
src/: main.cpp
